--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Styles CSS -->
-     <link rel="stylesheet" href="./styule.css">
+    <link rel="stylesheet" href="./styule.css">
 
     <title>Fungi Finders</title>
 </head>
+
 <body>
     <header class="site-header">
-        <img src="/assets/fungi-finders.svg" alt="">
+        <img src="/assets/fungi-finders.svg" alt="Fungi Finders">
         <nav class="primary-navigation">
             <ul>
                 <li><a href="/">Discover</a></li>
@@ -19,6 +21,19 @@
             </ul>
         </nav>
     </header>
-    
+    <main>
+        <section class="hero">
+            <h1>Discover the World of Mushroom Foraging</h1>
+            <p>Mushroom foraging is the art and science of identifying and
+                collecting wild mushrooms.</p>
+            <p>It's a practice that combines outdoor exploration botanical
+                knowledge, and culinary adventure. Foragers venture into forests,
+                fields, and even urban green spaces to discover these hidden
+                treasures.</p>
+            <p>But beware – this hobby requires careful study and respect for
+                nature, as some mushrooms can be dangerous if misidentified.</p>
+        </section>
+    </main>
 </body>
+
 </html>
