--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <!-- Styles CSS -->
     <link rel="stylesheet" href="./styule.css">
 
+    <!-- Typography -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&family=Outfit:wght@100..900&display=swap"
+        rel="stylesheet" />
+
     <title>Fungi Finders</title>
 </head>
 
