semantice html markup

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+    <!-- Site Header with navbar -->
     <header class="site-header">
         <img src="/assets/fungi-finders.svg" alt="Fungi Finders">
         <nav class="primary-navigation">
@@ -29,6 +30,8 @@
         </nav>
     </header>
     <main>
+
+        <!-- Hero Section -->
         <section class="hero">
             <h1>Discover the World of Mushroom Foraging</h1>
             <p>Mushroom foraging is the art and science of identifying and
@@ -40,6 +43,68 @@
             <p>But beware – this hobby requires careful study and respect for
                 nature, as some mushrooms can be dangerous if misidentified.</p>
         </section>
+
+        <!-- Joys of mushroom foraging section -->
+        <section>
+            <h2></h2>
+            <p></p>
+            <!-- three-columns -->
+            <div>
+                <div class="card">
+                    <img src="" alt="">
+                    <h3></h3>
+                    <p></p>
+                </div>
+                <div class="card">
+                    <img src="" alt="">
+                    <h3></h3>
+                    <p></p>
+                </div>
+                <div class="card">
+                    <img src="" alt="">
+                    <h3></h3>
+                    <p></p>
+                </div>
+            </div>
+        </section>
+
+        <!-- start your foraging adventure -->
+        <section>
+            <h2></h2>
+            <p></p>
+        </section>
+
+        <!-- Get to know your mushrooms -->
+        <section>
+            <!-- two columns -->
+            <div>
+                <div>
+                    <img src="" alt="">
+                </div>
+                <div>
+                    <h2></h2>
+                    <p></p>
+                    <p></p>
+                    <a class="button" href="#"></a>
+                </div>
+            </div>
+        </section>
+
+        <!-- Connect with Nature -->
+        <section>
+            <!-- two columns -->
+            <div>
+                <div>
+                    <h2></h2>
+                    <p></p>
+                    <a class="button" href="#"></a>
+                </div>
+                <div>
+                    <img src="" alt="">
+                </div>
+            </div>
+        </section>
+
     </main>
 </body>
 
