--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Styles CSS -->
-    <link rel="stylesheet" href="./styule.css">
+    <link rel="stylesheet" href="./style.css">
 
     <!-- Typography -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -127,7 +127,7 @@
                     <p>Experience the beauty of the great outdoors while foraging for
                         mushrooms with fellow enthusiasts.</p>
                     <a class="button" href="#">Learn more
-                        <span class="visually-hidden">about mushrooms with our handy mushroom guide</span></a>
+                        <span class="visually-hidden">about mushrooms with our handy mushroom guide.</span></a>
                 </div>
                 <div>
                     <img src="/assets/nature.webp" alt="A few small yellowish mushrooms growing on a mossy forest floor">
