styled ladmark regions

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
 <body>
     <!-- Site Header with navbar -->
-    <header class="site-header">
-        <div class="wrapper">
+    <header class="site-header" data-padding="compact">
+        <div class="wrapper" data-width="wide">
             <img src="/assets/fungi-finders.svg" alt="Fungi Finders">
             <nav class="primary-navigation">
                 <ul>
@@ -34,10 +34,12 @@
     <main>
 
         <!-- Hero Section -->
-        <section class="hero">
-            
+        <section class="hero section">
+
             <div class="wrapper">
                 <h1>Discover the World of Mushroom Foraging</h1>
+            </div>
+            <div class="wrapper" data-width="narrow">
                 <p>Mushroom foraging is the art and science of identifying and
                     collecting wild mushrooms.</p>
                 <p>It's a practice that combines outdoor exploration botanical
@@ -50,7 +52,7 @@
         </section>
 
         <!-- Joys of mushroom foraging section -->
-        <section>
+        <section class="section">
             <div class="wrapper">
                 <h2>The joys of mushroom foraging</h2>
                 <p>Foraging for mushrooms can be a rewarding experience for many
@@ -61,7 +63,8 @@
                 <!-- three-columns -->
                 <div>
                     <div class="card">
-                        <img src="/assets/outdoor-exploration.webp" alt="Tighly grouped brown mushrooms growing up the side of a mossy tree trunk">
+                        <img src="/assets/outdoor-exploration.webp"
+                            alt="Tighly grouped brown mushrooms growing up the side of a mossy tree trunk">
                         <h3>Outdoor Exploration</h3>
                         <p>Mushroom foraging takes you off the beaten path and into the
                             heart of nature. Learn to read the landscape, identifying prime
@@ -80,7 +83,8 @@
                             ecosystem health.</p>
                     </div>
                     <div class="card">
-                        <img src="/assets/culinary-delight.webp" alt="A freshly cooked plate of food, still steaming, with several mushroom slices on it">
+                        <img src="/assets/culinary-delight.webp"
+                            alt="A freshly cooked plate of food, still steaming, with several mushroom slices on it">
                         <h3>Culinary Delights</h3>
                         <p>Transform your foraged finds into delectable dishes. Many edible
                             mushrooms offer unique flavors and textures that can elevate
@@ -94,8 +98,8 @@
         </section>
 
         <!-- start your foraging adventure -->
-        <section>
-            <div class="wrapper">
+        <section class="section" data-padding="compact">
+            <div class="wrapper" data-width="narrow">
                 <h2>Start your <span>Foraging Adventure!</span></h2>
                 <p>Whether you're seeking a deeper connection with nature, a new
                     outdoor hobby, or simply love the idea of finding your own food,
@@ -104,13 +108,14 @@
         </section>
 
         <!-- Get to know your mushrooms -->
-        <section>
+        <section class="section">
             <!-- two columns -->
 
-            <div class="wrapper">
+            <div class="wrapper" data-width="wide">
                 <div>
                     <div>
-                        <img src="/assets/get-to-know.webp" alt="A man on his hands and knees carefully digging a mushroom out of the forest floor">
+                        <img src="/assets/get-to-know.webp"
+                            alt="A man on his hands and knees carefully digging a mushroom out of the forest floor">
                     </div>
                     <div>
                         <h2>Get to know your mushrooms</h2>
@@ -131,7 +136,7 @@
         </section>
 
         <!-- Connect with Nature -->
-        <section>
+        <section class="section">
             <!-- two columns -->
             <div class="wrapper" data-width="wide">
                 <div>
@@ -143,15 +148,16 @@
                             <span class="visually-hidden">about mushrooms with our handy mushroom guide.</span></a>
                     </div>
                     <div>
-                        <img src="/assets/nature.webp" alt="A few small yellowish mushrooms growing on a mossy forest floor">
+                        <img src="/assets/nature.webp"
+                            alt="A few small yellowish mushrooms growing on a mossy forest floor">
                     </div>
                 </div>
             </div>
         </section>
-        
+
     </main>
     <!-- footer -->
-    <footer class="site-footer"> 
+    <footer class="site-footer">
         <p>Happy Foraging!</p>
         <a href="mailto:contact@fungifinders.com">contact@fungifinders.com</a>
     </footer>
