added classes to html

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <!-- Joys of mushroom foraging section -->
         <section class="section">
             <div class="wrapper">
-                <h2>The joys of mushroom foraging</h2>
+                <h2 class="section-title">The joys of mushroom foraging</h2>
                 <p>Foraging for mushrooms can be a rewarding experience for many
                     reasons. People may venture off into the woods to forage for
                     mushrooms because it allows them to connect with nature, enjoy the
@@ -98,9 +98,9 @@
         </section>
 
         <!-- start your foraging adventure -->
-        <section class="section" data-padding="compact">
+        <section class="section background-accent" data-padding="compact">
             <div class="wrapper" data-width="narrow">
-                <h2>Start your <span>Foraging Adventure!</span></h2>
+                <h2 class="section-title">Start your <span class="text-brand">Foraging Adventure!</span></h2>
                 <p>Whether you're seeking a deeper connection with nature, a new
                     outdoor hobby, or simply love the idea of finding your own food,
                     mushroom foraging offers a uniquely rewarding experience.</p>
@@ -108,7 +108,7 @@
         </section>
 
         <!-- Get to know your mushrooms -->
-        <section class="section">
+        <section class="section background-extra-dark">
             <!-- two columns -->
 
             <div class="wrapper" data-width="wide">
@@ -118,7 +118,7 @@
                             alt="A man on his hands and knees carefully digging a mushroom out of the forest floor">
                     </div>
                     <div>
-                        <h2>Get to know your mushrooms</h2>
+                        <h2 class="section-title">Get to know your mushrooms</h2>
                         <p>Successful and safe mushroom foraging begins with a deep
                             understanding of the species you'll encounter in the wild - not
                             just what the edible ones look like, but their toxic
@@ -141,7 +141,7 @@
             <div class="wrapper" data-width="wide">
                 <div>
                     <div>
-                        <h2>Connect with Nature</h2>
+                        <h2 class="section-title">Connect with Nature</h2>
                         <p>Experience the beauty of the great outdoors while foraging for
                             mushrooms with fellow enthusiasts.</p>
                         <a class="button" href="#">Learn more
