--- a/index.html
+++ b/index.html
@@ -19,22 +19,26 @@
 
 <body>
     <!-- Site Header with navbar -->
-    <header class="site-header" data-padding="compact">
+    <header class="site-header">
+
         <div class="wrapper" data-width="wide">
-            <img src="/assets/fungi-finders.svg" alt="Fungi Finders">
-            <nav class="primary-navigation">
-                <ul>
-                    <li><a href="/">Discover</a></li>
-                    <li><a href="#">Mushroom Guide</a></li>
-                    <li><a href="#">FAQ</a></li>
-                </ul>
-            </nav>
+            <div class="site-header__inner">
+                <img src="/assets/fungi-finders.svg" alt="Fungi Finders">
+                <nav class="primary-navigation">
+                    <ul>
+                        <li><a href="/">Discover</a></li>
+                        <li><a href="#">Mushroom Guide</a></li>
+                        <li><a href="#">FAQ</a></li>
+                    </ul>
+                </nav>
+            </div>
         </div>
+
     </header>
     <main>
 
         <!-- Hero Section -->
-        <section class="hero section">
+        <section class="hero section" data-padding="compact">
 
             <div class="wrapper">
                 <h1>Discover the World of Mushroom Foraging</h1>
