updated grid layout

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     thrill of the hunt, and savor the satisfaction of finding a hidden
                     culinary treasure.</p>
                 <!-- three-columns -->
-                <div>
+                <div class="equal-columns">
                     <div class="card">
                         <img src="/assets/outdoor-exploration.webp"
                             alt="Tighly grouped brown mushrooms growing up the side of a mossy tree trunk">
@@ -116,7 +116,7 @@
             <!-- two columns -->
 
             <div class="wrapper" data-width="wide">
-                <div>
+                <div class="equal-columns" data-gap="large">
                     <div>
                         <img src="/assets/get-to-know.webp"
                             alt="A man on his hands and knees carefully digging a mushroom out of the forest floor">
