--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <!-- two columns -->
 
             <div class="wrapper" data-width="wide">
-                <div class="equal-columns" data-gap="large">
+                <div class="equal-columns" data-gap="large" data-alignment="centered">
                     <div>
                         <img src="/assets/get-to-know.webp"
                             alt="A man on his hands and knees carefully digging a mushroom out of the forest floor">
@@ -143,7 +143,7 @@
         <section class="section">
             <!-- two columns -->
             <div class="wrapper" data-width="wide">
-                <div>
+                <div class="equal-columns" data-gap="large" data-alignment="centered">
                     <div>
                         <h2 class="section-title">Connect with Nature</h2>
                         <p>Experience the beauty of the great outdoors while foraging for
