--- a/index.html
+++ b/index.html
@@ -38,35 +38,39 @@
     <main>
 
         <!-- Hero Section -->
-        <section class="hero section" data-padding="compact">
+        <section class="hero section flow" data-padding="compact">
 
             <div class="wrapper">
                 <h1>Discover the World of Mushroom Foraging</h1>
             </div>
             <div class="wrapper" data-width="narrow">
-                <p>Mushroom foraging is the art and science of identifying and
-                    collecting wild mushrooms.</p>
-                <p>It's a practice that combines outdoor exploration botanical
-                    knowledge, and culinary adventure. Foragers venture into forests,
-                    fields, and even urban green spaces to discover these hidden
-                    treasures.</p>
-                <p>But beware – this hobby requires careful study and respect for
-                    nature, as some mushrooms can be dangerous if misidentified.</p>
+                <div class="flow">
+                    <p>Mushroom foraging is the art and science of identifying and
+                        collecting wild mushrooms.</p>
+                    <p>It's a practice that combines outdoor exploration botanical
+                        knowledge, and culinary adventure. Foragers venture into forests,
+                        fields, and even urban green spaces to discover these hidden
+                        treasures.</p>
+                    <p>But beware – this hobby requires careful study and respect for
+                        nature, as some mushrooms can be dangerous if misidentified.</p>
+                </div>
             </div>
         </section>
 
         <!-- Joys of mushroom foraging section -->
         <section class="section">
-            <div class="wrapper">
+            <div class="wrapper flow">
+               
                 <h2 class="section-title">The joys of mushroom foraging</h2>
                 <p>Foraging for mushrooms can be a rewarding experience for many
                     reasons. People may venture off into the woods to forage for
                     mushrooms because it allows them to connect with nature, enjoy the
                     thrill of the hunt, and savor the satisfaction of finding a hidden
                     culinary treasure.</p>
+                    
                 <!-- three-columns -->
                 <div class="equal-columns">
-                    <div class="card">
+                    <div class="card grid-flow">
                         <img src="/assets/outdoor-exploration.webp"
                             alt="Tighly grouped brown mushrooms growing up the side of a mossy tree trunk">
                         <h3>Outdoor Exploration</h3>
@@ -76,7 +80,7 @@
                             meadows. Every expedition is a new adventure, with the potential
                             for exciting discoveries around every tree and under every log.</p>
                     </div>
-                    <div class="card">
+                    <div class="card grid-flow">
                         <img src="/assets/botanical-expertise.webp" alt="Various harvested wild mushrooms on a table">
                         <h3>Botanical Expertise</h3>
                         <p>Dive into the intricate world of fungal biology. Discover the
@@ -86,7 +90,7 @@
                             in a whole new light, recognizing the vital role fungi play in
                             ecosystem health.</p>
                     </div>
-                    <div class="card">
+                    <div class="card grid-flow">
                         <img src="/assets/culinary-delight.webp"
                             alt="A freshly cooked plate of food, still steaming, with several mushroom slices on it">
                         <h3>Culinary Delights</h3>
@@ -102,12 +106,14 @@
         </section>
 
         <!-- start your foraging adventure -->
-        <section class="section background-accent" data-padding="compact">
+        <section class="section background-accent text-center" data-padding="compact">
             <div class="wrapper" data-width="narrow">
+                <div class="flow font-size-lg text-high-contrast">
                 <h2 class="section-title">Start your <span class="text-brand">Foraging Adventure!</span></h2>
                 <p>Whether you're seeking a deeper connection with nature, a new
                     outdoor hobby, or simply love the idea of finding your own food,
                     mushroom foraging offers a uniquely rewarding experience.</p>
+                    </div>
             </div>
         </section>
 
@@ -121,7 +127,7 @@
                         <img src="/assets/get-to-know.webp"
                             alt="A man on his hands and knees carefully digging a mushroom out of the forest floor">
                     </div>
-                    <div>
+                    <div class="flow font-size-lg">
                         <h2 class="section-title">Get to know your mushrooms</h2>
                         <p>Successful and safe mushroom foraging begins with a deep
                             understanding of the species you'll encounter in the wild - not
@@ -144,7 +150,7 @@
             <!-- two columns -->
             <div class="wrapper" data-width="wide">
                 <div class="equal-columns" data-gap="large" data-alignment="centered">
-                    <div>
+                    <div class="flow font-size-lg">
                         <h2 class="section-title">Connect with Nature</h2>
                         <p>Experience the beauty of the great outdoors while foraging for
                             mushrooms with fellow enthusiasts.</p>
