--- a/index.html
+++ b/index.html
@@ -70,19 +70,19 @@
                     
                 <!-- three-columns -->
                 <div class="equal-columns">
-                    <div class="card grid-flow">
+                    <div class="card">
                         <img src="/assets/outdoor-exploration.webp"
                             alt="Tighly grouped brown mushrooms growing up the side of a mossy tree trunk">
-                        <h3>Outdoor Exploration</h3>
+                        <h3 class="card__title" >Outdoor Exploration</h3>
                         <p>Mushroom foraging takes you off the beaten path and into the
                             heart of nature. Learn to read the landscape, identifying prime
                             mushroom habitats from lush forest floors to sun-dappled
                             meadows. Every expedition is a new adventure, with the potential
                             for exciting discoveries around every tree and under every log.</p>
                     </div>
-                    <div class="card grid-flow">
+                    <div class="card">
                         <img src="/assets/botanical-expertise.webp" alt="Various harvested wild mushrooms on a table">
-                        <h3>Botanical Expertise</h3>
+                        <h3 class="card__title" >Botanical Expertise</h3>
                         <p>Dive into the intricate world of fungal biology. Discover the
                             unique structures of mushrooms, from caps to gills to spores.
                             Learn to use field guides and identification keys to distinguish
@@ -90,10 +90,10 @@
                             in a whole new light, recognizing the vital role fungi play in
                             ecosystem health.</p>
                     </div>
-                    <div class="card grid-flow">
+                    <div class="card">
                         <img src="/assets/culinary-delight.webp"
                             alt="A freshly cooked plate of food, still steaming, with several mushroom slices on it">
-                        <h3>Culinary Delights</h3>
+                        <h3 class="card__title" >Culinary Delights</h3>
                         <p>Transform your foraged finds into delectable dishes. Many edible
                             mushrooms offer unique flavors and textures that can elevate
                             your cooking. From the earthy porcini to the delicate
