--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     </main>
     <!-- footer -->
     <footer class="site-footer">
-        <p>Happy Foraging!</p>
+        <p class="site-footer__title">Happy Foraging!</p>
         <a href="mailto:contact@fungifinders.com">contact@fungifinders.com</a>
     </footer>
 </body>
